# CyEcho

./: CMakeLists.txt  README.md  resources.aps  resources.rc  setup_script.iss
resources/: logo.af
resources/cherrymx-black-abs/: sound.flac
resources/cherrymx-black-pbt/: sound.flac
resources/cherrymx-blue-abs/: config.json  sound.flac
resources/cherrymx-blue-pbt/: config.json  sound.flac
resources/cherrymx-brown-abs/: sound.flac
resources/cherrymx-brown-pbt/: config.json  sound.flac
resources/cherrymx-red-abs/: config.json  sound.flac
resources/eg-crystal-purple/: config.json  purple.flac
resources/eg-oreo/: config.json  sound.flac
src/: CyEcho.cpp  CyEcho.h  KeyCapture.cpp  KeyCapture.hpp  Play.cpp  Play.hpp  audio.h
